# hue-sdk

./: LICENSE  README.md  pyproject.toml
hue/sdk/: archetype.py  bridge_home.py  delta_action.py  dimming.py  identify.py  metadata.py  on.py  resource.py  room.py  roomzone.py  zone.py
hue/sdk/alert/: __init__.py  alert.py  effect_type.py  get.py  put.py
hue/sdk/bridge/: bridge.py  time_zone.py
hue/sdk/client/: client.py  session.py  token.py
hue/sdk/color/: color.py  gamut.py  gamut_type.py  get.py  put.py  xy.py
hue/sdk/color_temperature/: __init__.py  color_temperature.py  color_temperature_delta.py  get.py  mirek_schema.py  put.py
hue/sdk/data/: archetype.py  device_product_data.py  function.py  light_product_data.py  metadata.py  product_data.py
hue/sdk/device/: device.py  device_mode.py  device_mode_value.py  device_product_data.py  device_status.py  usertest.py
hue/sdk/device_power/: __init__.py  battery_state.py  device_power.py  power_state.py
hue/sdk/device_software_update/: __init__.py  device_software_update.py  problem.py  state.py
hue/sdk/dimming/: __init__.py  dimming.py  dimming_delta.py  get.py  put.py
hue/sdk/dynamics/: __init__.py  dynamic_status.py  dynamics.py  get.py  put.py
hue/sdk/effects/: __init__.py  abstract_effects.py  effect.py  effects.py  timed_effect.py  timed_effects.py
hue/sdk/gradient/: __init__.py  get.py  gradient.py  mode.py  point.py  put.py
hue/sdk/light/: __init__.py  abstract_light.py  grouped_light.py  light.py  light_get.py  light_put.py  metadata.py  mode.py  on.py  (+1 more)
tests/: test_hue.py
(+42 files in other folders)
